--- a/src/assets/Css/previsao/SecaoBar.css
+++ b/src/assets/Css/previsao/SecaoBar.css
@@ -8,6 +8,7 @@
   max-width: 500px;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
   position: relative; /* Adicionado para garantir que o input fique acima de outros elementos */
+  height: 60%;
 }
 
 .secao-input {
