--- a/src/assets/Css/login/Login.css
+++ b/src/assets/Css/login/Login.css
@@ -1,69 +1,95 @@
 .home-principal {
-   /* height: 130vh;*/
-}
-
-.logo-login {
+    /* Estilo principal da página */
+  }
+  
+  .logo-login {
     position: relative;
     top: 5%;
-}
-.logo-login-principal {
+  }
+  
+  .logo-login-principal {
     max-width: 80%; /* Ajusta o tamanho máximo do logotipo */
     height: 450px; /* Mantém a proporção da imagem */
     border-radius: 6px;
-}
+    opacity: 0.7; /* Define a transparência (90% opaco) */
+    transition: opacity 0.3s ease; /* Adiciona uma transição suave */
+  }
 
-form {
+  .logo-login-principal:hover {
+    opacity: 1; /* Torna totalmente opaco ao passar o mouse */
+  }
+  
+  form {
     padding: 20px;
     border-radius: 8px;
-    background-color: transparent; /* Fundo transparente */
+    background-color: #272c3ff5; /* Fundo transparente */
     box-shadow: 0px 4px 6px rgba(59, 14, 14, 0.1); /* Sombra para destaque */
-}
-
-.form-control-sm {
+  }
+  
+  .form-control-sm {
     height: 50px; /* Altura dos inputs */
     font-size: 0.9rem;
     width: 100%; /* Largura total */
     text-align: center; /* Centraliza o texto */
-}
-.form-label {
+  }
+  
+  .form-label {
     text-align: left; /* Alinha o texto à esquerda */
     display: block; /* Garante que a label fique acima do input */
     color: white; /* Mantém o texto branco */
     margin-bottom: 5px; /* Espaço entre a label e o input */
-}
-
-::placeholder {
+  }
+  
+  ::placeholder {
     text-align: center; /* Centraliza o texto do placeholder */
-}
-
-.btn {
+  }
+  
+  a {
+    text-decoration: none;
+    color: white;
+  }
+  
+  /* Efeito hover para links */
+  a:hover {
+    color: #610c18; /* Cor do texto ao passar o mouse */
+    transition: color 0.3s ease; /* Transição suave */
+  }
+  
+  .btn {
     height: 50px; /* Mesmo tamanho dos inputs */
     font-size: 0.9rem;
-}
-
-.btn-outline-secondary {
+    text-decoration: none;
+    color: white;
+  }
+  
+  .btn-outline-secondary {
     color: #e9dddd;
     border-color: #ccc;
-}
-
-.btn-outline-secondary:hover {
+  }
+  
+  .btn-outline-secondary:hover {
     background-color: #610c18;
     border-color: #999;
-}
-
-img {
+  }
+  
+  .text-esqueceu-senha {
+    text-decoration: none;
+  }
+  
+  img {
     vertical-align: middle;
-}
-.label-name {
+  }
+  
+  .label-name {
     color: white;
-}
-.label-login {
+  }
+  
+  .label-login {
     color: white;
     font-size: 45px;
-}
-
-.footer-login {
+  }
+  
+  .footer-login {
     position: relative;
     top: 10%;
-    
-}
+  }
