--- a/src/assets/Css/feed/SecaoFeedTimeLine.css
+++ b/src/assets/Css/feed/SecaoFeedTimeLine.css
@@ -122,6 +122,45 @@
   gap: 1.5rem; /* Espaçamento entre os botões */
 }
 
+.upload-buttons-modalEdit {
+  display: flex;
+  gap: 1.5rem; /* Espaçamento entre os botões */
+}
+
+.upload-iconEdit {
+  width: 15px;
+  height: 16px;
+  cursor: pointer;
+}
+
+.upload-textEdit {
+  margin-top: 0.5rem;
+  font-size: 14px;
+  color: #D9D9D9; /* Cor do texto */
+  transition: color 0.3s ease;
+}
+
+.upload-icon-container-modalEdit {
+  width: 50px;
+  height: 50px;
+  background-color: #1a2035;
+  border-radius: 50%;
+  display: flex
+;
+  align-items: center;
+  justify-content: center;
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+  transition: background-color 0.3sease, box-shadow 0.3sease;
+}
+
+.upload-labelEdit {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  cursor: pointer;
+  transition: transform 0.3s ease; /* Efeito de zoom ao passar o mouse */
+}
+
 .upload-label {
   display: flex;
   flex-direction: column;
