--- a/src/assets/Css/previsao/SecaoBarPrevisao.css
+++ b/src/assets/Css/previsao/SecaoBarPrevisao.css
@@ -1,4 +1,4 @@
-.secao-bar {
+.secao-bar-previsao {
   display: flex;
   align-items: center;
   background-color: #f5dcdc;
@@ -8,10 +8,10 @@
   max-width: 500px;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
   position: relative; /* Adicionado para garantir que o input fique acima de outros elementos */
-  height: 60%;
+  height: 33px;
 }
 
-.secao-input {
+.secao-input-previsao {
   flex: 1;
   border: none;
   outline: none;
@@ -29,7 +29,7 @@
   opacity: 0.8;
 }
 
-.secao-button {
+.secao-button-previsao {
   background: none;
   border: none;
   cursor: pointer;
