--- a/src/assets/Css/previsao/SecaoBarAmigo.css
+++ b/src/assets/Css/previsao/SecaoBarAmigo.css
@@ -1,4 +1,4 @@
-.secao-bar {
+.secao-bar-amigo {
     display: flex;
     align-items: center;
     background-color: #f5dcdc;
@@ -11,7 +11,7 @@
     height: 60%;
   }
   
-  .secao-input {
+  .secao-input-amigo {
     flex: 1;
     border: none;
     outline: none;
@@ -29,7 +29,7 @@
     opacity: 0.8;
   }
   
-  .secao-button {
+  .secao-button-amigo {
     background: none;
     border: none;
     cursor: pointer;
