--- a/src/assets/Css/home/Home.css
+++ b/src/assets/Css/home/Home.css
@@ -40,6 +40,7 @@
     padding: 20px; /* Adiciona espaçamento interno */
     padding-left: 5%; /* Ajustando a posição dos cards no centro */
     border-radius: 8px; /* Bordas arredondadas (opcional) */
+    flex-grow: 1;
 }
 
 .card {
@@ -75,7 +76,10 @@
 
 
 .footer-home {
-    text-align: center; /* Centraliza o conteúdo horizontalmente */
+    text-align: center;
+    margin-top: auto; /* Empurra o footer para o final da página */
+    background-color: #272c3ff5; /* Cor do fundo do footer */
+    color: white;
   
 }
 
