--- a/src/assets/Css/previsao/NavPrevisao.css
+++ b/src/assets/Css/previsao/NavPrevisao.css
@@ -1,7 +1,7 @@
 .secao-previsao-nav {
     width: 100%;
     height: 50px;
-    background-color: #498F9F;
+    background-color: #246878;
     filter: brightness(0.7);
     display: flex;
 }
