--- a/src/assets/Css/feed/SecaoFeedConfig.css
+++ b/src/assets/Css/feed/SecaoFeedConfig.css
@@ -32,7 +32,11 @@
   height: 35px;
   border-radius: 50%;
   margin-top: 10px;
-  margin-left: 30%;
+  margin-left: 25%;
+}
+
+.img-user.padrao {
+  width: 25%;
 }
 
 /* Estilo para o nome do usuário */
